--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "William .J Bashelor <wbashelor@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/register": "7.9.0",
     "@wdio/cli": "6.1.4",
     "@wdio/local-runner": "6.1.4",
     "@wdio/mocha-framework": "6.1.0",
