--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated Testing with WebdriverIO",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wdio wdio.conf.js"
   },
   "keywords": [
     "Automation",
