--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated Testing with WebdriverIO",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js"
+    "test": "npx wdio wdio.conf.js"
   },
   "keywords": [
     "Automation",
