--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wdio/spec-reporter": "6.0.16",
     "@wdio/sync": "6.1.0",
     "chromedriver": "81.0.0",
+    "prettier": "2.0.5",
     "wdio-chromedriver-service": "6.0.2"
   }
 }
